# Law-Firm-System

./: .dockerignore  .env.example  .env.vercel  .env.vercel.prod  .gitignore  .vercelignore  CNAME  Dockerfile  RAILWAY_DEPLOY.md  README.md  combined.sql  package-lock.json  package.json  pyproject.toml  tsconfig.api.json  vercel.json
.history/: README_20260502204400.md  README_20260507103601.md  README_20260507103602.md  README_20260507103604.md  README_20260507103642.md  README_20260507103643.md  README_20260507104736.md  README_20260507105450.md  README_20260507105511.md
api/: analytics.ts  cases.ts  clients.ts  documents.ts  employees.ts  health.ts  overview.ts  tickets.ts  upload-document.ts
backend/: .env.example  __init__.py  requirements.txt
dbms/: 03_procedures.sql  09_recovery.sql  DBMS_Features.md
dbms_lab/: 01_plsql_basics.sql  02_control_structures.sql  04_functions.sql  05_cursors.sql  06_triggers.sql  07_transactions.sql  08_concurrency.sql  10_dashboard_queries.sql
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  tsconfig.node.json  vite.config.mjs  vite.config.ts
uploads/: blackwell_committee_charter_redline.docx  blackwell_investor_qna_notes.txt  blue_committee_minutes_index.xlsx  blue_proxy_response_brief.docx  blue_proxy_timeline.xlsx  blue_whistleblower_timeline.docx  calder_employee_notice_pack.docx  calder_facility_closure_budget.xlsx  hamilton_lease_damage_grid.xlsx  hamilton_operator_default_notice.docx  hudson_family_meeting_summary.txt  hudson_tax_allocation_notes.docx  ironclad_defense_interview_outline.docx  (+24 more)
(+103 files in other folders)
